# ottd-prayer

./: .gitignore  README.md  bot.sample.yaml  main.py  mypy.ini  ottd-prayer.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml
src/ottd_prayer/: bot_structures.py  client_runner.py  config.py  coordinator_protocol.py  decorators.py  game_protocol.py  ip_finder.py  main.py  prayer_bot.py  saveload.py  server_connector.py
